feat: added Associazione model, payloadsize middleware, modify enpoints, fixed server shutdown
